--- a/nextjs/static/style.css
+++ b/nextjs/static/style.css
@@ -7,14 +7,19 @@ background-image: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg'
 background-size: cover;
 background-repeat: no-repeat;
 height: 100%;
-font-family: 'Numans', sans-serif;
+font-family: Impact;
 }
 
 
 .container{
-height: 100%;
+height: 70%;
 align-content: center;
 }
+#container{
+    box-align: right;
+    }
+
+
 
 .card{
 height: 370px;
@@ -23,6 +28,32 @@ margin-bottom: auto;
 width: 400px;
 background-color: rgba(0,0,0,0.5) !important;
 }
+
+.card2{
+ height: 40px;
+margin-top: auto;
+margin-bottom: auto;
+width: 100px;
+background-color: rgba(0,0,0,0.5) !important;
+    }
+.card3{
+display: flex;
+        }
+
+.font1{
+font-family: Impact;
+font-size: 72px;
+color: aliceblue;
+    
+
+    }
+.font2{
+font-family: Impact;
+font-size: 20px;
+color: aliceblue;
+        
+    
+        }
 
 .social_icon span{
 font-size: 60px;
