--- a/nextjs/static/style.css
+++ b/nextjs/static/style.css
@@ -34,7 +34,7 @@ background-color: rgba(0,0,0,0.5) !important;
 margin-top: auto;
 margin-bottom: auto;
 width: 100px;
-background-color: rgba(0,0,0,0.5) !important;
+background-color: rgba(59, 49, 49, 0.5) !important;
     }
 .card3{
 display: flex;
