[UPDATE] hame page layout

--- a/nextjs/static/style.css
+++ b/nextjs/static/style.css
@@ -10,6 +10,11 @@ height: 100%;
 font-family: Impact;
 }
 
+#myCarousel {
+    height: auto;
+    width: auto;
+    overflow: hidden;
+}
 
 .container{
 height: 70%;
@@ -29,12 +34,10 @@ background-color: rgba(0,0,0,0.5) !important;
 margin-top: auto;
 margin-bottom: auto;
 width: 100px;
-<<<<<<< HEAD
 background-color: rgba(59, 49, 49, 0.5) !important;
-=======
 background-color: white;
->>>>>>> fe9a2880af4f84fb85622fb6f7a79e3a8b7f955c
-    }
+ }
+ 
 .card3{
     height: 370px;
     margin-top: auto;
@@ -121,3 +124,4 @@ color: white;
 .links a{
 margin-left: 4px;
 }
+
